# wxauto-pro

./: .gitignore  @AutomationLog.txt  DESIGN.md  build_exe.ps1  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1  test_send.py  wxauto-pro-onefile.spec  wxauto-pro.spec
docs/: packaging.md
src/: app.py  config.py  logger.py  message_adapter.py  models.py  repository.py  wx_facade.py
wxauto/: languages.py  logger.py  param.py  wx.py
wxauto/msgs/: base.py  msg.py  type.py
wxauto/ui/: base.py  chatbox.py  component.py  main.py  sessionbox.py
